[gd_scene load_steps=2 format=3 uid="uid://2yjtaugoco0x"]

[ext_resource type="Script" path="res://Calendari.gd" id="1_7doy7"]

[node name="Calendari" type="Node"]
script = ExtResource("1_7doy7")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 13.0
offset_top = 11.0
offset_right = 53.0
offset_bottom = 51.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="displayAny" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "2025"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="displayMes" type="Label" parent="UI/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "gener"

[node name="displayDia" type="Label" parent="UI/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "1"

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="x1" type="Button" parent="UI/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "x1"

[node name="x2" type="Button" parent="UI/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "x2"

[node name="x4" type="Button" parent="UI/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "x4"
